samples/_failures_safe/1761598848_3bc9e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0082b48a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_0082b48a.c:171:41: error: expected ‘;’ at end of input
  171 |                 token.type = TOKEN_ERROR
      |                                         ^
      |                                         ;
./samples/SAFE/__tmp_0082b48a.c:171:17: error: expected declaration or statement at end of input
  171 |                 token.type = TOKEN_ERROR
      |                 ^~~~~
./samples/SAFE/__tmp_0082b48a.c:171:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0082b48a.c:171:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0082b48a.c:171:17: error: expected declaration or statement at end of input
